# pylibjpeg

./: .codecov.yml  .coveragerc  .gitignore  .gitmodules  .travis.yml  LICENCE.txt  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest-builds.yml  release-deploy.yml
build_tools/travis/: install.sh
docs/: plugins.md
docs/changes/: v1.0.0.rst  v1.2.0.rst
docs/release_notes/: v1.1.0.rst  v1.3.0.rst  v1.4.0.rst  v2.0.0.rst  v2.1.0.rst
pyjpeg/: __init__.py  _jpeg.cpp
pyjpeg/scripts/: get_pixel_data.py
pylibjpeg/: __init__.py  _config.py  _libjpeg.cpp  _libjpeg.pyx  _version.py  libjpeg.py  libjpeg_handler.py  plugins.py  ppm.py  utils.py
pylibjpeg/data/: __init__.py  manager.py
pylibjpeg/data/ds/: README.md  README.rst  __init__.py  index.py
pylibjpeg/data/ds/JPEG2000/: __init__.py
pylibjpeg/data/ds/JPEG2000Lossless/: JPEG2KLossless_1s_1f_u_16_16.dcm  __init__.py
pylibjpeg/data/ds/JPEGBaseline/: JPEGBaseline_1s_1f_u_08_08.dcm  __init__.py  index.py
pylibjpeg/data/ds/JPEGExtended/: JPEGExtended_3s_1f_u_08_08.dcm  RG2_JPLY.dcm  RG2_JPLY_fixed  __init__.py  index.py
pylibjpeg/data/ds/JPEGLS/: CT1_JLSN.dcm  RG1_JLSN  RG2_JLSN  __init__.py
pylibjpeg/data/ds/JPEGLSLossless/: RG2_JLSL  __init__.py  index.py
pylibjpeg/data/ds/JPEGLossless/: JPEGLossless_1s_1f_i_16_16_bad.dcm  __init__.py  (+1 more)
pylibjpeg/pydicom/: pixel_data_handler.py  utils.py
pylibjpeg/scripts/: JPGBaseline_3s_1f_8b.dcm  imshow.py  test.py  xtest_decode.py  xtest_reconstruct.py
pylibjpeg/src/pylibjpeg/: decode.cpp  decode.hpp  streamhook.cpp  streamhook.hpp  utils.hpp
pylibjpeg/tests/: README.md  README.rst  __init__.py  test_decode.py  test_decode_pydicom.py  test_encode.py  test_environment.py  test_handler.py  test_manager.py  test_misc.py  test_parameters.py  test_plugins.py  test_pydicom.py  test_reconstruct.py
pylibjpeg/tools/: jpegio.py  utils.py
pylibjpeg/tools/s10918/: __init__.py  _markers.py  _parsers.py  _printers.py  io.py  rep.py
pylibjpeg/tools/tests/: test_utils.py
(+27 files in other folders)
